--- a/styles/dark.css
+++ b/styles/dark.css
@@ -3,12 +3,17 @@
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --color-page: rgba(0, 0, 40, 1);
+  --color-them: rgba(255, 0, 112, 1);
+  --color-outline-hover: rgba(255, 0, 112, 0.4);
+  --color-rec: rgba(255, 0, 112, 1);
+  --color-light_bulb: rgba(255, 0, 112, 1);
+  --color-big-headlines: #DB00FF;
+  --color-big-headlines-shadow: rgba(255, 0, 112, 1);
+  --color-title: rgba(0, 0, 40, 1);
+  --background-color-title: rgba(255, 0, 112, 1);
+  --color-footnote: rgba(53, 52, 48, 1);
 }
 
 .theme-dark .page {
