--- a/styles/light.css
+++ b/styles/light.css
@@ -5,10 +5,27 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --color-page: rgba(255, 241, 247, 1);
+  --color-them: rgba(53, 52, 48, 1);
+  --color-outline-hover: rgba(50, 49, 45, 0.4);
+  --color-big-headlines: rgba(255, 194, 230, 1);
+  --color-big-headlines-shadow: rgba(255, 141, 203, 1);
+  --color-title: rgba(53, 52, 48, 1);
+  --background-color-title: rgba(255, 141, 203, 1);
+  --color-footnote: rgba(255, 0, 112, 1);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --color-page: rgba(255, 241, 247, 1);
+    --color-them: rgba(53, 52, 48, 1);
+    --color-outline-hover: rgba(50, 49, 45, 0.4);
+    --color-big-headlines: rgba(255, 194, 230, 1);
+    --color-big-headlines-shadow: rgba(255, 141, 203, 1);
+    --color-title: rgba(53, 52, 48, 1);
+    --background-color-title: rgba(255, 141, 203, 1);
+    --color-footnote: rgba(255, 0, 112, 1);  
+  }
 }
 
 .theme-light .page {
