--- a/styles/style.css
+++ b/styles/style.css
@@ -2,4 +2,167 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
+  display: grid;
+  inline-size: 1024px;
+  block-size: 100%;
+  margin: auto;
+  background-color: var(--color-page);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.theme-dark .page {
+  background-image: url(../images/cover-image-dark.png);
+}
+
+.theme-light .page {
+  background-image: url(../images/cover-image-light.png);
+}
+
+/*header*/
+.header {
+  display: grid;
+  height: 768px;
+  position: relative;
+  
+}
+
+/*темы*/
+.decorated-zone {
+  position: relative;
+}
+
+.decorated-zone::before {
+  content: '';
+  position: relative;
+  width: 25px;
+  height: 25px;
+  inset: 1% 96.7%;
+  border-top: 1px solid var(--color-them);
+  border-right: 1px solid var(--color-them);
+}
+
+.decorated-zone::after {
+  content: '';
+  position: relative;
+  width: 25px;
+  height: 25px;
+  inset: 0 0 20px 20px;
+  border-bottom: 1px solid var(--color-them);
+  border-left: 1px solid var(--color-them);
+}
+
+.header__theme-menu-list {
+  display: flex;
+  gap: 0.5em;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  justify-content: center;
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  line-height: 18px;
+  color: var(--color-them);
+}
+
+.header__theme-menu-button {
+  min-width: 70px;
+  height: 26px;
+  font-family: 'IBM Plex Mono', sans-serif;
+  background-color: transparent;
+  border-style: none;
+  text-transform: lowercase;
+  cursor: pointer;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--color-outline-hover);
+}
+
+.header__theme-menu-button:focus {
+  outline: none;
+  border-bottom: 1px solid var(--color-them);
+}
+
+.header__theme-menu-button:disabled {
+  outline: 1px solid var(--color-them);
+  pointer-events: none;
+}
+
+/*rec с лампочкой*/
+
+.header__rec {
+  display: flex;
+  width: 52px;
+  height: 26px;
+  justify-content: space-between;
+  align-items: center;
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  line-height: 25px;
+  color: var(--color-rec);
+
+}
+
+.light_bulb {
+  position: relative;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  background: transparent;
+}
+
+.light_bulb::after {
+  content: '';
+  position: absolute;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  background-color: var(--color-light_bulb);
+  box-shadow: 0px 0px 4px 2px var(--color-light_bulb);
+}
+
+.theme_light .header__rec { 
+  display: none; 
+}
+
+/*заголовок*/
+
+.big_headlines {
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 157px;
+  line-height: 129.53px;
+  color: var(--color-big-headlines);
+  text-shadow: 4px 4px 0px var(--color-big-headlines-shadow);
+}
+
+.title-decor {
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  line-height: 23.4px;
+  color: var(--color-title);
+  background-color: var(--background-color-title);
+}
+
+.header_title {
+  width: 491px;
+  height: 71px;
+}
+
+/*меню*/
+
+/*подвал*/
+
+.footer {
+  width: 100%;
+  height: 768px;
+  display: grid;
+  
+}
+
+h6.big_headlines {
+  text-shadow: 2px 2px 0px var(--color-big-headlines-shadow);
+  text-align: center;
 }
