--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,7 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
-  display: grid;
-  inline-size: 1024px;
-  block-size: 100%;
+  width: 1024px;
   margin: auto;
   background-color: var(--color-page);
   background-repeat: no-repeat;
@@ -13,21 +11,14 @@
   background-attachment: fixed;
 }
 
-.theme-dark .page {
-  background-image: url(../images/cover-image-dark.png);
-}
-
-.theme-light .page {
-  background-image: url(../images/cover-image-light.png);
-}
-
 /*header*/
 .header {
   display: grid;
-  height: 768px;
-  position: relative;
-  
-  
+  block-size: 768px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 2fr 1fr 2fr;
+  padding: 20px 20px 0 0;
+  margin-bottom: 60px;
 }
 
 /*темы*/
@@ -37,22 +28,32 @@
 
 .decorated-zone::before {
   content: '';
-  position: relative;
+  position: absolute;
   width: 25px;
   height: 25px;
-  inset: 1% 96.7%;
+  top: 20px;
+  right: 20px;
   border-top: 1px solid var(--color-them);
   border-right: 1px solid var(--color-them);
+  padding: 20px 20px 0 0;
 }
 
 .decorated-zone::after {
   content: '';
-  position: relative;
+  position: absolute;
   width: 25px;
   height: 25px;
-  inset: 0 0 20px 20px;
+  top: 723px;
+  left: 20px;
   border-bottom: 1px solid var(--color-them);
   border-left: 1px solid var(--color-them);
+}
+
+.header__theme-menu {
+  grid-column: 2 / 4;
+  display: grid;
+  justify-content: center;
+  margin-left: 20px;
 }
 
 .header__theme-menu-list {
@@ -94,9 +95,16 @@
 
 /*rec с лампочкой*/
 
+.header__rec_col {
+  grid-column: 4 / 5;
+  display: grid;
+  justify-content: end;
+  padding-right: 10px;
+}
+
 .header__rec {
   display: flex;
-  width: 52px;
+  width: 50xp;
   height: 26px;
   justify-content: space-between;
   align-items: center;
@@ -104,7 +112,6 @@
   font-size: 18px;
   line-height: 25px;
   color: var(--color-rec);
-
 }
 
 .light_bulb {
@@ -125,26 +132,27 @@
   box-shadow: 0px 0px 4px 2px var(--color-light_bulb);
 }
 
-.theme_light .header__rec { 
-  display: none; 
-}
 
 /*заголовок*/
 
 .big_headlines {
   font-family: 'IBM Plex Mono', sans-serif;
-  font-size: 157px;
+  font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem) ;
   line-height: 129.53px;
   color: var(--color-big-headlines);
   text-shadow: 4px 4px 0px var(--color-big-headlines-shadow);
+  grid-column: 1 / 5;
 }
 
-.title-decor {
-  font-family: 'IBM Plex Mono', sans-serif;
-  font-size: 18px;
-  line-height: 23.4px;
-  color: var(--color-title);
-  background-color: var(--background-color-title);
+
+/**/
+
+.header_title_main {
+  grid-column: 3 / 5;
+  display: grid;
+  justify-content: end;
+  align-items: center;
+  margin-bottom: 40px;
 }
 
 .header_title {
@@ -152,7 +160,175 @@
   height: 71px;
 }
 
+.title-caption {
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  line-height: 23.4px;
+  color: var(--color-title);
+  background-color: var(--background-color-title);
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
 /*меню*/
+
+.main {
+  display: grid;
+  gap: 80px;
+  margin-bottom: 60px;
+}
+
+/* секция про сложность сосредоточиться */
+.hard_concentrate {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  padding: 0 20px;
+  gap: 10px;
+}
+
+.theme_main {
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  line-height: 23.4px;
+  color: var(--color-theme_main);
+}
+
+.hard_concentrate_answer {
+
+}
+
+.main_text {
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-size: 18px;
+  line-height: 23.4px;
+  color: var(--color-main_text);
+}
+
+.link-in_text {
+  text-shadow: 1px 1px 0px var(--color-big-headlines-shadow);
+  text-decoration: none;
+}
+
+.link-in_text:hover {
+  outline: none;
+  border-bottom: 1px solid var(--color-main_text);
+}
+
+.link-in_text:focus {
+  border-bottom: none;
+  outline: 1px solid var(--color-main_text);
+  outline-offset: -1px;
+}
+
+/* секция что снижает концентрацию */
+
+.decreased_concentration {
+  display: grid;
+  gap: 20px;
+  padding: 0 20px;
+}
+
+.heading_theme {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.heading_theme_main {
+  grid-column: 1 / 2;
+}
+
+.decreased_concentration_answer {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.decreased_concentration_answer_item {
+ 
+}
+
+/* секция с советами по концетрации */
+
+.how_concentrate {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 12px;
+  padding: 0 20px;
+}
+
+.how_concentrate_answer .title-caption,
+.gallery  .title-caption{
+  margin-bottom: 20px;
+}
+
+.title-tips {
+  font-family: 'IBM Plex Mono', sans-serif;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 23.4px;
+  color: var(--color-title-tips);
+  background-color: var(--background-color-title-tips);
+  margin: 10px 0;
+}
+
+.main_text:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+/*секция с картинками*/
+
+.gallery {
+  display: grid;
+  padding: 0 20px;
+}
+
+.img {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr) 314px;
+  grid-template-rows: 260px 315px 433px;
+  gap: 20px;
+  box-sizing: border-box;
+  min-block-size: calc(100vh - 5em);
+  grid-auto-flow: dense;
+}
+
+.gallery__item {
+  box-sizing: border-box;
+  min-block-size: 4.3em;
+  margin: 0;
+}
+
+.gallery__image {
+  inline-size: 100%;
+  block-size: 100%;
+  max-block-size: 100%;
+  object-fit: cover;
+}
+
+.gallery__item:nth-child(1) {
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
+}
+
+.gallery__item:nth-child(2) {
+  grid-column: 3 / 4;
+  grid-row: 1 / 3;
+}
+
+.gallery__item:nth-child(3) {
+  grid-column: 1 / 2;
+  grid-row: 2 / 4;
+}
+
+.gallery__item:nth-child(4) {
+
+}
+
+.gallery__item:nth-child(5) {
+  grid-column: 2 / 4;
+  grid-row: 3 / 4;
+
+}
 
 /*подвал*/
 
@@ -160,10 +336,21 @@
   width: 100%;
   height: 768px;
   display: grid;
-  
+  justify-content: center;
+  align-items: center;
 }
 
-h6.big_headlines {
+h6 .big_headlines {
   text-shadow: 2px 2px 0px var(--color-big-headlines-shadow);
   text-align: center;
+}
+
+@media (width <= 768px) {
+
+}
+
+@media (width <= 375px) {
+  .big_headlines {
+    font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  }
 }
