--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,9 +8,13 @@
   --color-outline-hover: rgba(255, 0, 112, 0.4);
   --color-rec: rgba(255, 0, 112, 1);
   --color-light_bulb: rgba(255, 0, 112, 1);
-  --color-big-headlines: #DB00FF;
+  --color-big-headlines: rgba(219, 0, 255, 1);
   --color-big-headlines-shadow: rgba(255, 0, 112, 1);
   --color-title: rgba(0, 0, 40, 1);
   --background-color-title: rgba(255, 0, 112, 1);
+  --color-theme_main: rgba(255, 0, 112, 1);
+  --color-main_text: rgba(241, 178, 206, 1);
+  --color-title-tips: rgba(0, 0, 40, 1);
+  --background-color-title-tips: rgba(255, 0, 112, 1);
   --color-footnote: rgba(255, 0, 112, 1);
 }
