--- a/styles/variables.css
+++ b/styles/variables.css
@@ -17,4 +17,61 @@
   --color-title-tips: rgba(0, 0, 40, 1);
   --background-color-title-tips: rgba(255, 0, 112, 1);
   --color-footnote: rgba(255, 0, 112, 1);
+
+  --page-width: 1024px;
+  --header-block-size: 768px;
+  --decorated-zone-after-top: 723px;
+  --header_title-inline: 491px;
+  --header_title-block: 71px;
+  --big_headlines-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  --header_title_main-m-b: 40px;
+  --hard_concentrate-gap: 10px;
+  --decreased_concentration_answer-gap: 20px;
+  --how_concentrate-gap: 12px;
+  --header-padding: 20px 20px 0 0;
+  --decorated-zone-before-top: 20px;
+  --decorated-zone-before-right: 20px;
+  --header-margin-bottom: 60px;
+  --padding-main: 0 20px;
+  --main-gap: 80px;
+  --img-gap: 20px;
+  --main-margin-bottom: 60px;
+  --header__theme-menu-margin-top: 0;
+  --big_headlines-line-height: 129.53px;
 }
+
+@media (width <= 768px) {
+  :root {
+    --page-width: 768px;
+    --header-block-size: 1024px;
+    --decorated-zone-after-top: 980px;
+    --header_title-inline: 364px;
+    --header_title-block: 117px;
+    --header_title_main-m-b: 80px;
+    --hard_concentrate-gap: 20px;
+    --how_concentrate-gap: 23px;
+    --header__theme-menu-margin-top: 40px;
+  }
+}
+
+@media (width <= 375px) {
+  :root {
+    --page-width: 375px;
+    --header-block-size: 668px;
+    --decorated-zone-after-top: 638px;
+    --header_title-inline: 355px;
+    --header_title-block: 117px;
+    --big_headlines-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    --header-padding: 10px 10px 0 10px;
+    --decorated-zone-before-top: 15px;
+    --decorated-zone-before-right: 10px;
+    --header-margin-bottom: 45px;
+    --padding-main: 0 10px;
+    --main-gap: 50px;
+    --img-gap: 10px;
+    --main-margin-bottom: 35px;
+    --header__theme-menu-margin-top: 11px;
+    --big_headlines-line-height: 95.7px;
+  }
+}
+
