--- a/styles/style.css
+++ b/styles/style.css
@@ -316,10 +316,6 @@
   grid-row: 2 / 4;
 }
 
-.gallery__item:nth-child(4) {
-
-}
-
 .gallery__item:nth-child(5) {
   grid-column: 2 / 4;
   grid-row: 3 / 4;
@@ -406,6 +402,7 @@ h6 .big_headlines {
 
   .how_concentrate {
     grid-template-columns: 1fr;
+    gap: 18px;
   }
 
   .how_concentrate .theme_main,
@@ -414,12 +411,10 @@ h6 .big_headlines {
     inline-size: 375px;
     padding-right: 20px;
   }
-
-  .how_concentrate {
-    gap: 18px;
-  }
   
-  .gallery {
+  .gallery,
+  .decreased_concentration,
+  .how_concentrate {
     inline-size: 375px;
   }
 
