--- a/styles/style.css
+++ b/styles/style.css
@@ -381,6 +381,10 @@ h6 .big_headlines {
   .header_rec_theme {
     grid-template-rows: 1fr 3fr;
   }
+  
+  .heading_theme {
+    grid-template-columns: 1fr;
+  }
 
   .big_headlines {
     padding-bottom: 0;
@@ -393,7 +397,7 @@ h6 .big_headlines {
   }
 
   .theme_main {
-    inline-size: 300px;
+    inline-size: 350px;
   }
 
   .header_title .title-caption {
@@ -403,13 +407,6 @@ h6 .big_headlines {
   .how_concentrate {
     grid-template-columns: 1fr;
     gap: 18px;
-  }
-
-  .how_concentrate .theme_main,
-  .how_concentrate_answer,
-  .decreased_concentration_answer {
-    inline-size: 375px;
-    padding-right: 20px;
   }
   
   .gallery,
