исправлены наименования переменных

--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,13 +9,13 @@
   --color-them: rgba(255, 0, 112, 1);
   --color-outline-hover: rgba(255, 0, 112, 0.4);
   --color-rec: rgba(255, 0, 112, 1);
-  --color-light_bulb: rgba(255, 0, 112, 1);
+  --color-rec-light: rgba(255, 0, 112, 1);
   --color-big-headlines: rgba(219, 0, 255, 1);
   --color-big-headlines-shadow: rgba(255, 0, 112, 1);
   --color-title: rgba(0, 0, 40, 1);
   --background-color-title: rgba(255, 0, 112, 1);
-  --color-theme_main: rgba(255, 0, 112, 1);
-  --color-main_text: rgba(241, 178, 206, 1);
+  --color-theme-main: rgba(255, 0, 112, 1);
+  --color-main-text: rgba(241, 178, 206, 1);
   --color-title-tips: rgba(0, 0, 40, 1);
   --background-color-title-tips: rgba(255, 0, 112, 1);
   --color-footnote: rgba(53, 52, 48, 1);
@@ -44,13 +44,13 @@
     --color-them: rgba(255, 0, 112, 1);
     --color-outline-hover: rgba(255, 0, 112, 0.4);
     --color-rec: rgba(255, 0, 112, 1);
-    --color-light_bulb: rgba(255, 0, 112, 1);
+    --color-rec-light: rgba(255, 0, 112, 1);
     --color-big-headlines: rgba(219, 0, 255, 1);
     --color-big-headlines-shadow: rgba(255, 0, 112, 1);
     --color-title: rgba(0, 0, 40, 1);
     --background-color-title: rgba(255, 0, 112, 1);
-    --color-theme_main: rgba(255, 0, 112, 1);
-    --color-main_text: rgba(241, 178, 206, 1);
+    --color-theme-main: rgba(255, 0, 112, 1);
+    --color-main-text: rgba(241, 178, 206, 1);
     --color-title-tips: rgba(0, 0, 40, 1);
     --background-color-title-tips: rgba(255, 0, 112, 1);
     --color-footnote: rgba(53, 52, 48, 1);
