--- a/styles/light.css
+++ b/styles/light.css
@@ -38,8 +38,8 @@
     --color-big-headlines-shadow: rgba(255, 141, 203, 1);
     --color-title: rgba(53, 52, 48, 1);
     --background-color-title: rgba(255, 141, 203, 1);
-    --color-theme_main: rgba(53, 52, 48, 1);
-    --color-main_text: rgba(53, 52, 48, 1);
+    --color-theme-main: rgba(53, 52, 48, 1);
+    --color-main-text: rgba(53, 52, 48, 1);
     --color-title-tips: rgba(53, 52, 48, 1);
     --background-color-title-tips: rgba(255, 141, 203, 1);
     --color-footnote: rgba(255, 0, 112, 1);
