--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@
   grid-column: 1 / 3;
   display: grid;
   /*justify-content: end;*/
-  margin-top: var(--header__theme-menu-margin-top);
+  margin-top: var(--header-theme-menu-margin-top);
 }
 
 .header__theme-menu-list {
@@ -140,8 +140,8 @@
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  background-color: var(--color-light_bulb);
-  box-shadow: 0px 0px 4px 2px var(--color-light_bulb);
+  background-color: var(--color-rec-light);
+  box-shadow: 0px 0px 4px 2px var(--color-rec-light);
 }
 
 
@@ -149,8 +149,8 @@
 
 .big_headlines {
   font-family: 'IBM Plex Mono', sans-serif;
-  font-size: var(--big_headlines-font-size);
-  line-height: var(--big_headlines-line-height);
+  font-size: var(--big-headlines-font-size);
+  line-height: var(--big-headlines-line-height);
   color: var(--color-big-headlines);
   text-shadow: 4px 4px 0px var(--color-big-headlines-shadow);
   grid-column: 1 / 3;
@@ -171,8 +171,8 @@
 .header_title {
   grid-column: 2 / 3;
   margin-top: 95px;
-  inline-size: var(--header_title-inline);
-  block-size: var(--header_title-block);
+  inline-size: var(--header-title-inline);
+  block-size: var(--header-title-block);
 }
 
 .title-caption {
@@ -197,7 +197,7 @@
   display: grid;
   grid-template-columns: 1fr 2fr;
   padding: var(--padding-main);
-  gap: var(--hard_concentrate-gap);
+  gap: var(--hard-concentrate-gap);
 }
 
 /* секция про сложность сосредоточиться */
@@ -206,14 +206,14 @@
   font-family: 'IBM Plex Mono', sans-serif;
   font-size: var(--font-size);
   line-height: 23.4px;
-  color: var(--color-theme_main);
+  color: var(--color-theme-main);
 }
 
 .main_text {
   font-family: 'IBM Plex Mono', sans-serif;
   font-size: var(--font-size);
   line-height: 23.4px;
-  color: var(--color-main_text);
+  color: var(--color-main-text);
 }
 
 .link-in_text {
@@ -223,12 +223,12 @@
 
 .link-in_text:hover {
   outline: none;
-  border-bottom: 1px solid var(--color-main_text);
+  border-bottom: 1px solid var(--color-main-text);
 }
 
 .link-in_text:focus {
   border-bottom: none;
-  outline: 1px solid var(--color-main_text);
+  outline: 1px solid var(--color-main-text);
   outline-offset: -1px;
 }
 
@@ -254,7 +254,7 @@
 .decreased_concentration_answer {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: var(--decreased_concentration_answer-gap);
+  gap: var(--decreased-concentration-answer-gap);
 }
 
 /* секция с советами по концетрации */
