--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,13 +7,13 @@
   --color-them: rgba(255, 0, 112, 1);
   --color-outline-hover: rgba(255, 0, 112, 0.4);
   --color-rec: rgba(255, 0, 112, 1);
-  --color-light_bulb: rgba(255, 0, 112, 1);
+  --color-rec-light: rgba(255, 0, 112, 1);
   --color-big-headlines: rgba(219, 0, 255, 1);
   --color-big-headlines-shadow: rgba(255, 0, 112, 1);
   --color-title: rgba(0, 0, 40, 1);
   --background-color-title: rgba(255, 0, 112, 1);
-  --color-theme_main: rgba(255, 0, 112, 1);
-  --color-main_text: rgba(241, 178, 206, 1);
+  --color-theme-main: rgba(255, 0, 112, 1);
+  --color-main-text: rgba(241, 178, 206, 1);
   --color-title-tips: rgba(0, 0, 40, 1);
   --background-color-title-tips: rgba(255, 0, 112, 1);
   --color-footnote: rgba(255, 0, 112, 1);
@@ -22,13 +22,13 @@
   --page-width: 1024px;
   --header-block-size: 768px;
   --decorated-zone-after-top: 723px;
-  --header_title-inline: 491px;
-  --header_title-block: 71px;
-  --big_headlines-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  --header_title_main-m-b: 40px;
-  --hard_concentrate-gap: 10px;
-  --decreased_concentration_answer-gap: 20px;
-  --how_concentrate-gap: 12px;
+  --header-title-inline: 491px;
+  --header-title-block: 71px;
+  --big-headlines-font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  --header-title_main-m-b: 40px;
+  --hard-concentrate-gap: 10px;
+  --decreased-concentration-answer-gap: 20px;
+  --how-concentrate-gap: 12px;
   --header-padding: 20px 20px 0 0;
   --decorated-zone-before-top: 20px;
   --decorated-zone-before-right: 20px;
@@ -37,8 +37,8 @@
   --main-gap: 80px;
   --img-gap: 20px;
   --main-margin-bottom: 60px;
-  --header__theme-menu-margin-top: 0;
-  --big_headlines-line-height: 129.53px;
+  --header-theme-menu-margin-top: 0;
+  --big-headlines-line-height: 129.53px;
 }
 
 @media (width <= 768px) {
@@ -46,12 +46,12 @@
     --page-width: 768px;
     --header-block-size: 1024px;
     --decorated-zone-after-top: 980px;
-    --header_title-inline: 364px;
-    --header_title-block: 117px;
-    --header_title_main-m-b: 80px;
-    --hard_concentrate-gap: 20px;
-    --how_concentrate-gap: 23px;
-    --header__theme-menu-margin-top: 40px;
+    --header-title-inline: 364px;
+    --header-title-block: 117px;
+    --header-title_main-m-b: 80px;
+    --hard-concentrate-gap: 20px;
+    --how-concentrate-gap: 23px;
+    --header-theme-menu-margin-top: 40px;
   }
 }
 
@@ -60,9 +60,9 @@
     --page-width: 375px;
     --header-block-size: 668px;
     --decorated-zone-after-top: 638px;
-    --header_title-inline: 355px;
-    --header_title-block: 117px;
-    --big_headlines-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+    --header-title-inline: 355px;
+    --header-title-block: 117px;
+    --big-headlines-font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
     --header-padding: 10px 10px 0 10px;
     --decorated-zone-before-top: 10px;
     --decorated-zone-before-right: 10px;
@@ -71,8 +71,8 @@
     --main-gap: 50px;
     --img-gap: 10px;
     --main-margin-bottom: 35px;
-    --header__theme-menu-margin-top: 8px;
-    --big_headlines-line-height: 95.7px;
+    --header-theme-menu-margin-top: 8px;
+    --big-headlines-line-height: 95.7px;
   }
 }
 
