--- a/styles/style.css
+++ b/styles/style.css
@@ -15,8 +15,8 @@
 .header {
   display: grid;
   block-size: var(--header-block-size);
-  grid-template-columns: 1fr min-content; /*1fr 1fr 1fr 1fr*/
-  grid-template-rows: 2fr 1fr 2fr;  /*1fr min-content 1fr*/
+  grid-template-columns: 1fr min-content;
+  grid-template-rows: 2fr 1fr 2fr;
   padding: var(--header-padding);
   margin-bottom: var(--header-margin-bottom);
 }
@@ -49,16 +49,9 @@
   border-left: 1px solid var(--color-them);
 }
 
-/*.header_rec_theme {
-  grid-column: 2 / 5;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}*/
-
 .header__theme-menu {
   grid-column: 1 / 3;
   display: grid;
-  /*justify-content: end;*/
   margin-top: var(--header-theme-menu-margin-top);
 }
 
@@ -103,12 +96,6 @@
 
 /*rec с лампочкой*/
 
-/*.header__rec_col {
-  display: grid;
-  justify-content: end;
-  padding-right: 10px;
-}*/
-
 .header__rec {
   display: flex;
   position: absolute;
@@ -124,14 +111,6 @@
   line-height: 25px;
   color: var(--color-rec);
 }
-
-/*.light_bulb {
-  position: relative;
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  background: transparent;
-}*/
 
 .header__rec::after {
   content: '';
@@ -159,14 +138,6 @@
 
 
 /**/
-
-/*.header_title_main {
-  grid-column: 3 / 5;
-  display: grid;
-  justify-content: end;
-  align-items: center;
-  margin-bottom: var(--header_title_main-m-b);
-}*/
 
 .header_title {
   grid-column: 2 / 3;
@@ -238,11 +209,6 @@
   grid-template-columns: 1fr;
   gap: 20px;
 }
-
-/*.heading_theme {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-}*/
 
 .heading_theme_main {
   grid-column: 1 / 2;
@@ -348,14 +314,8 @@ h6 .big_headlines {
     flex-direction: column;
     justify-content: start;
   }
-
-  .header_rec_theme {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr;
-  }
   
   .header__theme-menu {
-    /*grid-row: 2 / 3;*/
     grid-column: 2 / 3;
     justify-items: end;
     align-items: center;
@@ -368,10 +328,6 @@ h6 .big_headlines {
 
   h1.big_headlines {
     padding-bottom: 15px;
-  }
-
-  .heading_theme {
-    grid-template-columns: 1fr 3fr;
   }
 
   .header_title {
@@ -399,21 +355,9 @@ h6 .big_headlines {
     margin-top: 45px;
   }
 
-  .header_rec_theme {
-    grid-template-rows: 1fr 3fr;
-  }
-  
-  .heading_theme {
-    grid-template-columns: 1fr;
-  }
-
   .hard_concentrate {
     grid-template-columns: 1fr;
     inline-size: 375px;
-  }
-
-  .heading_theme_main {
-    grid-template-columns: 1fr;
   }
 
   .header__theme-menu {
