--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@
 
 .page {
   /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
-  max-width: var(--page-width);
+  max-inline-size: var(--page-width);
   margin: auto;
   background-color: var(--color-page);
   background-repeat: no-repeat;
@@ -349,7 +349,7 @@ h5.big_headlines {
 @media (width <= 375px) {
 
   .header {
-    min-block-size: var(--height-header);
+    min-block-size: var(--header-block-size);
   }
 
   .footer .big_headlines {
