--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
+/* Основные стили проекта.*/
 
 .page {
-  /* сохраните в разметке и стилях класс page у тега body. Он удобен, чтобы составлять селекторы для разных цветовых тем. */
   max-inline-size: var(--page-width);
   margin: auto;
   background-color: var(--color-page);
@@ -12,10 +11,11 @@
 }
 
 /*header*/
+
 .header {
   display: grid;
-  /*height: var(--height-header);*/
   height: var(--header-block-size);
+  min-height: 668px;
   grid-template-columns: 1fr min-content;
   grid-template-rows: 2fr 1fr 2fr;
   padding: var(--header-padding);
@@ -23,6 +23,7 @@
 }
 
 /*темы*/
+
 .decorated-zone {
   position: relative;
 }
@@ -124,7 +125,6 @@
   box-shadow: 0px 0px 4px 2px var(--color-rec-light);
 }
 
-
 /*заголовок*/
 
 .big_headlines {
@@ -136,7 +136,6 @@
   grid-column: 1 / 3;
   display: grid;
 }
-
 
 /**/
 
@@ -347,7 +346,6 @@ h5.big_headlines {
 }
 
 @media (width <= 375px) {
-
   .header {
     min-block-size: var(--header-block-size);
   }
